# bpod-core

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  api.html  changelog.html  developer_guide.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  schema.html  search.html  searchindex.js
.doctrees/: api.doctree  developer_guide.doctree  schema.doctree
.doctrees/api/: bpod_core.bpod.Bpod.doctree  bpod_core.bpod.BpodError.doctree  bpod_core.bpod.Channel.doctree  bpod_core.bpod.HardwareConfiguration.doctree  bpod_core.bpod.Input.doctree  bpod_core.bpod.Module.doctree  bpod_core.bpod.Output.doctree  bpod_core.bpod.VersionInfo.doctree  bpod_core.bpod.doctree  bpod_core.com.ChunkedSerialReader.doctree  bpod_core.com.ExtendedSerial.doctree  bpod_core.com.doctree  bpod_core.com.to_bytes.doctree  bpod_core.doctree  bpod_core.fsm.Condition.doctree  bpod_core.fsm.GlobalCounter.doctree  bpod_core.fsm.GlobalTimer.doctree  bpod_core.fsm.State.doctree  bpod_core.fsm.StateMachine.doctree  bpod_core.fsm.doctree  bpod_core.misc.convert_to_snake_case.doctree  bpod_core.misc.doctree
.github/workflows/: documentation.yaml  main.yaml  publish.yaml
_sources/api/: bpod_core.bpod.Bpod.rst.txt  bpod_core.bpod.BpodError.rst.txt  bpod_core.bpod.Channel.rst.txt  bpod_core.bpod.HardwareConfiguration.rst.txt  bpod_core.bpod.Input.rst.txt  bpod_core.bpod.Module.rst.txt  bpod_core.bpod.Output.rst.txt  bpod_core.bpod.VersionInfo.rst.txt  bpod_core.bpod.rst.txt  bpod_core.com.ChunkedSerialReader.rst.txt  bpod_core.com.ExtendedSerial.rst.txt  bpod_core.com.rst.txt  bpod_core.com.to_bytes.rst.txt  bpod_core.fsm.Condition.rst.txt  bpod_core.fsm.GlobalCounter.rst.txt  bpod_core.fsm.GlobalTimer.rst.txt  bpod_core.fsm.State.rst.txt  bpod_core.fsm.StateMachine.rst.txt  bpod_core.fsm.rst.txt  bpod_core.misc.convert_to_snake_case.rst.txt  bpod_core.misc.rst.txt  bpod_core.rst.txt
api/: bpod_core.bpod.Bpod.html  bpod_core.bpod.BpodError.html  bpod_core.bpod.Channel.html  bpod_core.bpod.HardwareConfiguration.html  bpod_core.bpod.Input.html  bpod_core.bpod.Module.html  bpod_core.bpod.Output.html  bpod_core.bpod.VersionInfo.html  bpod_core.bpod.html  bpod_core.com.ChunkedSerialReader.html  bpod_core.com.ExtendedSerial.html  bpod_core.com.html  bpod_core.com.to_bytes.html  bpod_core.fsm.Condition.html  bpod_core.fsm.GlobalCounter.html  bpod_core.fsm.GlobalTimer.html  bpod_core.fsm.State.html  bpod_core.fsm.StateMachine.html  bpod_core.fsm.html  bpod_core.html  bpod_core.misc.convert_to_snake_case.html  bpod_core.misc.html
bpod_core/: __init__.py  bpod.py  com.py  fsm.py  misc.py  serial.py  serial_extensions.py
docs/source/: conf.py  schema.rst
docs/source/api/: bpod_core.bpod.Bpod.rst  bpod_core.bpod.BpodException.rst  bpod_core.bpod.Channel.rst  bpod_core.bpod.Input.rst  bpod_core.bpod.Module.rst  bpod_core.bpod.Output.rst  bpod_core.bpod.SerialReaderProtocolRaw.rst  bpod_core.bpod.find_bpod_ports.rst  bpod_core.bpod.rst  bpod_core.rst  bpod_core.serial_extensions.ExtendedSerial.rst  bpod_core.serial_extensions.SerialSingleton.rst  bpod_core.serial_extensions.SerialSingletonException.rst  bpod_core.serial_extensions.get_port_from_serial_number.rst  bpod_core.serial_extensions.get_serial_number_from_port.rst  bpod_core.serial_extensions.rst  bpod_core.serial_extensions.to_bytes.rst
jsonschema/: statemachine.json
schema/: statemachine.json
tests/: test_actual_serial.py  test_bpod.py  test_com.py
