[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [{ name = "Florian Rau", email = "bimac@users.noreply.github.com" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = ["numpy", "pandas", "pydantic>=2.11", "pyserial>=3.5", "graphviz>=0.20.3"]
description = "Python package for interfacing with the Bpod finite state machine"
dynamic = ["version"]
license = { text = "MIT" }
name = "bpod-core"
readme = "README.md"
requires-python = ">=3.10"

[dependency-groups]
doc = [
    "myst-parser>=4.0.1",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx>=8.1.3",
    "sphinx-jsonschema>=1.19.1",
]
test = [
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "tox>=4.25.0",
    "tox-pdm>=0.7.2",
]
typing = ["mypy>=1.15.0", "types-pyserial>=3.5.0.20250326"]

[project.urls]
Changelog = "https://github.com/int-brain-lab/bpod-core/blob/main/CHANGELOG.md"
Documentation = "https://int-brain-lab.github.io/bpod-core/"
Homepage = "https://github.com/int-brain-lab/bpod-core"
Issues = "https://github.com/int-brain-lab/bpod-core/issues"
Repository = "https://github.com/int-brain-lab/bpod-core.git"

[tool.pdm]
distribution = true

[tool.pdm.build]
excludes = ["docs/source/api"]
source-includes = ["docs/source/", "tests/"]

[tool.pdm.version]
path = "bpod_core/__init__.py"
source = "file"

[tool.pdm.scripts]
docs = "sphinx-build ./docs/source ./docs/build"

[tool.ruff]
include = ["bpod_core/**/*.py", "tests/**/*.py"]
target-version = "py310"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
ignore = [
  "D100",    # Missing docstring in public module
  "D101",    # Missing docstring in public class
  "D102",    # Missing docstring in puclic method
  "D103",    # Missing docstring in public function
  "D104",    # Missing docstring in public package
  "D105",    # Missing docstring in magic method
  "D401",    # First line of docstring should be in imperative mood
  "PLR0912", # Too many branches
  "PLR0915", # Too many statements
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
]
select = [
  "B",   # flake8-bugbear
  "D",   # pydocstyle
  "E",   # pycodestyle Error
  "F",   # Pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "PL",  # pylint
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
  "W",   # pycodestyle Warning
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
exclude = "^(?!bpod_core).*$"
files = "bpod_core/**/*.py"
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source_pkgs = [ "bpod_core" ]
relative_files = true

[tool.pytest.ini_options]
addopts = "-q -ra --cov-report xml --cov-report html --cov=bpod_core"
console_output_style = "count"
minversion = "6.0"
testpaths = ["tests/"]

[tool.tox]
env_list = ["typing", "clean", "py310", "py311", "py312", "py313", "py314"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
groups = ["test"]
commands = [["pytest", "--cov", "--cov-append"]]

[tool.tox.env.clean]
description = "erase coverage"
skip_install = true
commands = [["coverage", "erase"]]

[tool.tox.env.typing]
description = "run type check on code base"
groups = ["typing"]
commands = [["mypy", "-p", "bpod_core"]]
